--- a/ec2-demo/template/content/component-info.yaml
+++ b/ec2-demo/template/content/component-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{ values.name | dump }}
+  name: aws-ec2-instance
   annotations:
     github.com/project-slug: emaranjitha/github-actions-series #name of the terraform repo
     backstage.io/techdocs-ref: dir:.
